--- a/UAS.ipynb
+++ b/UAS.ipynb
@@ -18,24 +18,48 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "7C9a1-AHQyX1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7C9a1-AHQyX1",
-        "outputId": "00330251-6eac-41d1-dd64-c1404b49f08a"
+        "outputId": "e3d5e4d7-54a8-4c13-b02b-87f466f53884"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
       "source": [
-        "from google.colab import drive\n",
+        " from google.colab import drive\n",
         "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyspark"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WraapwFVA6lw",
+        "outputId": "7ad1170f-edd1-4f5a-c9fe-ec7905d78308"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.11/dist-packages (3.4.0)\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.11/dist-packages (from pyspark) (0.10.9.7)\n"
+          ]
+        }
       ]
     },
     {
@@ -44,9 +68,10 @@
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql.functions import col, isnan, when, count\n",
         "from pyspark.ml.feature import StringIndexer, VectorAssembler\n",
-        "from pyspark.ml.classification import RandomForestClassifier, GBTClassifier, LogisticRegression, NaiveBayes\n",
+        "from pyspark.ml.classification import RandomForestClassifier, GBTClassifier, NaiveBayes\n",
         "from pyspark.ml.evaluation import BinaryClassificationEvaluator, MulticlassClassificationEvaluator\n",
-        "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator"
+        "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
+        "from pyspark.ml.classification import MultilayerPerceptronClassifier"
       ],
       "metadata": {
         "id": "G7PhUkfERGDi"
@@ -76,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s1rnWiMjRYQ7",
-        "outputId": "2b1ca620-1d4b-4a4a-8a92-8f0207a1cb20"
+        "outputId": "dbba024f-1ff6-4df0-de65-6a42562cd51b"
       },
       "execution_count": null,
       "outputs": [
@@ -128,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_pXErkC0RfBH",
-        "outputId": "171957e4-f770-42a3-bc87-d71e8baa32fb"
+        "outputId": "f16cb431-3c6d-42b1-fad4-d5e28029d1df"
       },
       "execution_count": null,
       "outputs": [
@@ -140,8 +165,8 @@
             "|summary|gender|              age|      hypertension|     heart_disease|smoking_history|              bmi|       HbA1c_level|blood_glucose_level|           diabetes|\n",
             "+-------+------+-----------------+------------------+------------------+---------------+-----------------+------------------+-------------------+-------------------+\n",
             "|  count|100000|           100000|            100000|            100000|         100000|           100000|            100000|             100000|             100000|\n",
-            "|   mean|  NULL|41.88585600000013|           0.07485|           0.03942|           NULL|27.32076709999422|5.5275069999983275|          138.05806|              0.085|\n",
-            "| stddev|  NULL|22.51683987161704|0.2631504702289171|0.1945930169980986|           NULL|6.636783416648357|1.0706720918835468|  40.70813604870383|0.27888308976661896|\n",
+            "|   mean|  null|41.88585600000013|           0.07485|           0.03942|           null|27.32076709999422|5.5275069999983275|          138.05806|              0.085|\n",
+            "| stddev|  null|22.51683987161704|0.2631504702289171|0.1945930169980986|           null|6.636783416648357|1.0706720918835468|  40.70813604870383|0.27888308976661896|\n",
             "|    min|Female|             0.08|                 0|                 0|        No Info|            10.01|               3.5|                 80|                  0|\n",
             "|    max| Other|             80.0|                 1|                 1|    not current|            95.69|               9.0|                300|                  1|\n",
             "+-------+------+-----------------+------------------+------------------+---------------+-----------------+------------------+-------------------+-------------------+\n",
@@ -172,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zguprynTR-mh",
-        "outputId": "e14758e6-9934-408c-8bbf-d13b6f30b7ff"
+        "outputId": "64f273aa-1443-43d9-e142-fa3ca47064bf"
       },
       "execution_count": null,
       "outputs": [
@@ -221,7 +246,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XibrRZK9SBye",
-        "outputId": "a0de134f-b5f0-4f20-e47f-95239d6408b9"
+        "outputId": "8e7c21b3-0380-4f1e-b972-f7b3ef397d48"
       },
       "execution_count": null,
       "outputs": [
@@ -269,7 +294,7 @@
           "height": 943
         },
         "id": "UnUZQC4VT-ef",
-        "outputId": "820e544f-8504-4456-f440-fbcd73509249"
+        "outputId": "651ea121-3a24-4a9f-d445-0f17e3fdaa8e"
       },
       "execution_count": null,
       "outputs": [
@@ -358,10 +383,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 497
+          "height": 517
         },
         "id": "SzKweu6xUxqz",
-        "outputId": "673c0682-3450-4a2a-a5cf-f2849dffdd5c"
+        "outputId": "3fd1b2a5-2835-4ae3-d588-2882092868e6"
       },
       "execution_count": null,
       "outputs": [
@@ -369,7 +394,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-50-cec0ec1a942e>:6: FutureWarning: \n",
+            "<ipython-input-22-cec0ec1a942e>:6: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -417,7 +442,7 @@
           "height": 521
         },
         "id": "cmb0c99NT5nF",
-        "outputId": "126d8482-ffdf-42d1-db00-7588f2df8984"
+        "outputId": "789545c8-1415-434c-8d59-728a8af412d1"
       },
       "execution_count": null,
       "outputs": [
@@ -468,7 +493,7 @@
           "height": 564
         },
         "id": "fZHGDfrxU43o",
-        "outputId": "774d9b0c-1e1f-4dfc-8835-75da0ad1e869"
+        "outputId": "6f7ccd84-051b-4ed3-881f-3e4c3fc3fc7a"
       },
       "execution_count": null,
       "outputs": [
@@ -530,7 +555,7 @@
           "height": 564
         },
         "id": "SEJCFvnQU9Mc",
-        "outputId": "72e526a7-0c0f-4588-8601-15eadcd5430d"
+        "outputId": "d0dd7fbb-3802-454f-94e8-c12ffe4fa110"
       },
       "execution_count": null,
       "outputs": [
@@ -604,7 +629,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tK9T_HXxTWQO",
-        "outputId": "4d86968c-da65-4ab3-a40f-bb84458e128f"
+        "outputId": "00773de9-934f-4916-f8f5-8fc909a35382"
       },
       "execution_count": null,
       "outputs": [
@@ -667,15 +692,16 @@
         "gbt_model = gbt.fit(train_data)\n",
         "gbt_predictions = gbt_model.transform(test_data)\n",
         "\n",
-        "# Model Logistic Regression\n",
-        "lr = LogisticRegression(labelCol=\"diabetes\", featuresCol=\"features\")\n",
-        "lr_model = lr.fit(train_data)\n",
-        "lr_predictions = lr_model.transform(test_data)\n",
-        "\n",
         "# Model Naive Bayes\n",
         "nb = NaiveBayes(labelCol=\"diabetes\", featuresCol=\"features\")\n",
         "nb_model = nb.fit(train_data)\n",
-        "nb_predictions = nb_model.transform(test_data)"
+        "nb_predictions = nb_model.transform(test_data)\n",
+        "\n",
+        "# Model Multilayer Perceptron\n",
+        "layers = [8, 5, 4, 2] # Define the layers for MLP\n",
+        "mlp = MultilayerPerceptronClassifier(labelCol=\"diabetes\", featuresCol=\"features\", maxIter=100, layers=layers, blockSize=128, seed=1234)\n",
+        "mlp_model = mlp.fit(train_data)\n",
+        "mlp_predictions = mlp_model.transform(test_data)"
       ],
       "metadata": {
         "id": "9QafmPgmV8ha"
@@ -686,16 +712,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: tampilkan AUC, Akurasi, Precision, Recall, dan F1-Score\n",
-        "\n",
-        "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
-        "\n",
         "# Evaluasi dengan AUC, Akurasi, Precision, Recall, dan F1-Score\n",
         "evaluator = BinaryClassificationEvaluator(labelCol=\"diabetes\", metricName=\"areaUnderROC\")\n",
-        "evaluator_multi = MulticlassClassificationEvaluator(labelCol=\"diabetes\", metricName=\"accuracy\")\n",
-        "evaluator_precision = MulticlassClassificationEvaluator(labelCol=\"diabetes\", metricName=\"weightedPrecision\")\n",
-        "evaluator_recall = MulticlassClassificationEvaluator(labelCol=\"diabetes\", metricName=\"weightedRecall\")\n",
-        "evaluator_f1 = MulticlassClassificationEvaluator(labelCol=\"diabetes\", metricName=\"f1\")\n",
+        "evaluator_multi = MulticlassClassificationEvaluator(labelCol=\"diabetes\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
+        "evaluator_precision = MulticlassClassificationEvaluator(labelCol=\"diabetes\", predictionCol=\"prediction\", metricName=\"weightedPrecision\")\n",
+        "evaluator_recall = MulticlassClassificationEvaluator(labelCol=\"diabetes\", predictionCol=\"prediction\", metricName=\"weightedRecall\")\n",
+        "evaluator_f1 = MulticlassClassificationEvaluator(labelCol=\"diabetes\", predictionCol=\"prediction\", metricName=\"f1\")\n",
         "\n",
         "\n",
         "def evaluate_model(predictions, model_name):\n",
@@ -708,15 +730,15 @@
         "\n",
         "evaluate_model(rf_predictions, \"Random Forest\")\n",
         "evaluate_model(gbt_predictions, \"Gradient Boosted Tree\")\n",
-        "evaluate_model(lr_predictions, \"Logistic Regression\")\n",
-        "evaluate_model(nb_predictions, \"Naive Bayes\")"
+        "evaluate_model(nb_predictions, \"Naive Bayes\")\n",
+        "evaluate_model(mlp_predictions, \"MLP\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "k8okiIMQV9zl",
-        "outputId": "9d980c8c-9936-4bae-bb7c-a58d332b27bc"
+        "id": "7XOurq56FfwA",
+        "outputId": "41c0d21c-d758-4139-ddca-a696121d2bb7"
       },
       "execution_count": null,
       "outputs": [
@@ -724,10 +746,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Random Forest - AUC: 0.9442641668492207, Accuracy: 0.9725359470620429, Precision: 0.9733343963811428, Recall: 0.9725359470620428, F1-Score: 0.9700079279412303\n",
-            "Gradient Boosted Tree - AUC: 0.972954122853685, Accuracy: 0.9725359470620429, Precision: 0.9733343963811428, Recall: 0.9725359470620428, F1-Score: 0.9700079279412303\n",
-            "Logistic Regression - AUC: 0.9617989108040716, Accuracy: 0.961739390019404, Precision: 0.9594658996859231, Recall: 0.961739390019404, F1-Score: 0.9591989009468282\n",
-            "Naive Bayes - AUC: 0.0882257991957189, Accuracy: 0.9025324643017065, Precision: 0.8901339755492327, Recall: 0.9025324643017065, F1-Score: 0.895554958093114\n"
+            "Random Forest - AUC: 0.9457702543760824, Accuracy: 0.9725359470620429, Precision: 0.9733343963811428, Recall: 0.9725359470620428, F1-Score: 0.9700079279412303\n",
+            "Gradient Boosted Tree - AUC: 0.9728429767530405, Accuracy: 0.9725359470620429, Precision: 0.9733343963811428, Recall: 0.9725359470620428, F1-Score: 0.9700079279412303\n",
+            "Naive Bayes - AUC: 0.0882257991957189, Accuracy: 0.9025324643017065, Precision: 0.8901339755492327, Recall: 0.9025324643017065, F1-Score: 0.895554958093114\n",
+            "MLP - AUC: 0.5105234608082452, Accuracy: 0.9172098114334046, Precision: 0.8412738381897016, Recall: 0.9172098114334046, F1-Score: 0.8776022667657039\n"
           ]
         }
       ]
